# klipper

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig
klippy/extras/: motion_report.py
lib/bossac/src/: Device.cpp
main/: CMakeLists.txt
scripts/motan/: readlog.py
src/: adccmds.c  basecmd.c  buttons.c  command.c  debugcmds.c  endstop.c  gpiocmds.c  i2ccmds.c  initial_pins.c  lcd_hd44780.c  lcd_st7920.c  neopixel.c  pulse_counter.c  pwmcmds.c  sched.c  sensor_adxl345.c  spi_software.c  spicmds.c  stepper.c  thermocouple.c  tmcuart.c  trsync.c
src/atsamd/: Kconfig  Makefile  clock.c  gpio.c  main.c  usbserial.c
src/esp/: CMakeLists.txt  autoconf.h  console.c  gpio.c  gpio.h  io.h  irq.h  main.c  misc.h  pgm.h  timer.c  usb_cdc.c
src/stm32/: Kconfig  hard_pwm.c  spi.c  stm32f0.c  stm32f4.c  usbfs.c  usbotg.c
zh/: Code_Overview.html  Config_Changes.html  Config_Reference.html  Debugging.html  G-Codes.html  Status_Reference.html  TMC_Drivers.html
zh/search/: search_index.json
